# CarCameraPlayer

./: .gitignore  Backend.cpp  Backend.h  CMakeLists.txt  ControlsPanel.qml  ImageButton.qml  InvalidRoot.qml  Main.qml  OwnFileDialog.qml  README.md  ValidRoot.qml  VideoPath.cpp  VideoPath.h  function_diagram.drawio  main.cpp
assets/icons/appIcon/: appicon.rc
qml/: BetterButtonText.qml  ControlsPanel.qml  InvalidRoot.qml  Main.qml  ValidRoot.qml
sources/: AudioMonitor.cpp  AudioMonitor.h  Backend.cpp  Backend.h  VideoPath.cpp  VideoPath.h  main.cpp
